Update Blog “2019-06-01-test”

--- a/_posts/blog/2019-06-01-test.md
+++ b/_posts/blog/2019-06-01-test.md
@@ -2,7 +2,6 @@
 layout: blog
 title: Test
 date: 2019-06-01T19:18:24.017Z
-thumbnail: /public/tobias.jpg
-rating: 3
 ---
-Das ist ein Test!!!
+# Das ist ein Test!!!
+und das ist noch mehr Text!!
